3.2.1
	+ Use Error instead of TryCatch::Lite
3.2
	+ Initial release