@@ -1,3 +1,5 @@
+HEAD
+	+ Added basic deprovision option
 3.2.1
 	+ Use Error instead of TryCatch::Lite
 3.2
